; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_ank.c_get_default.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_ank.c_get_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@KADM5_PRINCIPAL_NORMAL_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*, i32, i32)* @get_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_default(%struct.TYPE_4__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @krb5_principal_get_realm(i32 %13, i32 %14)
  store i32 %15, i32* %10, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %10, align 4
  %20 = call i64 @krb5_make_principal(i32 %18, i32* %9, i32 %19, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* null)
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %3
  %24 = load i64, i64* %8, align 8
  store i64 %24, i64* %4, align 8
  br label %37

25:                                               ; preds = %3
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @KADM5_PRINCIPAL_NORMAL_MASK, align 4
  %30 = call i64 @kadm5_get_principal(%struct.TYPE_4__* %26, i32 %27, i32 %28, i32 %29)
  store i64 %30, i64* %8, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @krb5_free_principal(i32 %33, i32 %34)
  %36 = load i64, i64* %8, align 8
  store i64 %36, i64* %4, align 8
  br label %37

37:                                               ; preds = %25, %23
  %38 = load i64, i64* %4, align 8
  ret i64 %38
}

declare dso_local i32 @krb5_principal_get_realm(i32, i32) #1

declare dso_local i64 @krb5_make_principal(i32, i32*, i32, i8*, i32*) #1

declare dso_local i64 @kadm5_get_principal(%struct.TYPE_4__*, i32, i32, i32) #1

declare dso_local i32 @krb5_free_principal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
